Test/dafny0/Coinductive.dfy.expect
Coinductive.dfy(13,11): Error: because of cyclic dependencies among constructor argument types, no instances of datatype 'Rec_Forever' can be constructed
Coinductive.dfy(16,11): Error: because of cyclic dependencies among constructor argument types, no instances of datatype 'D' can be constructed
Coinductive.dfy(38,11): Error: because of cyclic dependencies among constructor argument types, no instances of datatype 'K' can be constructed
Coinductive.dfy(64,11): Error: because of cyclic dependencies among constructor argument types, no instances of datatype 'NotFiniteEnough_Dt' can be constructed
Coinductive.dfy(93,8): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(94,8): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(95,8): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(95,21): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(101,5): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(104,27): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
Coinductive.dfy(105,28): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
Coinductive.dfy(106,17): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
Coinductive.dfy(116,24): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(122,15): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(123,10): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(148,21): Error: a recursive call from a copredicate can go only to other copredicates
Coinductive.dfy(204,8): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(205,8): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(206,8): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(206,21): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(219,15): Error: a copredicate can be called recursively only in positive positions
Coinductive.dfy(226,16): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(238,5): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(241,28): Error: an inductive predicate can be called recursively only in positive positions and cannot sit inside an unbounded universal quantifier
Coinductive.dfy(242,29): Error: an inductive predicate can be called recursively only in positive positions and cannot sit inside an unbounded universal quantifier
Coinductive.dfy(243,17): Error: an inductive predicate can be called recursively only in positive positions and cannot sit inside an unbounded universal quantifier
Coinductive.dfy(253,12): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(259,15): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(260,10): Error: an inductive predicate can be called recursively only in positive positions
Coinductive.dfy(280,21): Error: a recursive call from an inductive predicate can go only to other inductive predicates
Coinductive.dfy(296,4): Error: this call does not type check, because the context uses a _k parameter of type ORDINAL whereas the callee uses a _k parameter of type nat
Coinductive.dfy(299,4): Error: this call does not type check, because the context uses a _k parameter of type nat whereas the callee uses a _k parameter of type ORDINAL
Coinductive.dfy(307,13): Error: this call does not type check, because the context uses a _k parameter of type nat whereas the callee uses a _k parameter of type ORDINAL
Coinductive.dfy(313,13): Error: this call does not type check, because the context uses a _k parameter of type ORDINAL whereas the callee uses a _k parameter of type nat
Coinductive.dfy(323,5): Error: incorrect type of method in-parameter 0 (expected nat, got ORDINAL)
Coinductive.dfy(329,5): Error: incorrect type of method in-parameter 0 (expected ORDINAL, got int)
Coinductive.dfy(355,19): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
Coinductive.dfy(355,44): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
Coinductive.dfy(358,19): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
Coinductive.dfy(358,46): Error: a copredicate can be called recursively only in positive positions and cannot sit inside an unbounded existential quantifier
40 resolution/type errors detected in Coinductive.dfy
